[package]
name = "its_ok_to_be_block_on"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/infogulch/its_ok_to_be_block_on"
description = """
A minimal implementation of block_on, to execute futures in a syncronous context.
"""

[dependencies]
futures-task = "0.3.30"
pin-utils = "0.1.0"

[lib]
name = "block_on"
path = "lib.rs"
